Remove bottom bav in contact and fix spacing in homepage

--- a/src/app/contactpage/contactpage.component.scss
+++ b/src/app/contactpage/contactpage.component.scss
@@ -72,6 +72,7 @@ h5{
     .main-container{
         padding: 70px 15px 15px 15px !important;
         margin: 0;
+        min-height: 100vh;
     }
     .contact-container{
         justify-content: center;
