--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -6,7 +6,7 @@
     margin: 0;  
 }
 .sub-container{
-  min-height: 80vh;
+  min-height: 50vh;
   opacity: 0;
   animation: fadeInText 2s ease-in-out forwards; 
 }
@@ -61,15 +61,16 @@
 }
 
 .slider {
+  margin-top: 1rem;
   height: 60px;
   position: relative;
   width: 100%;
-
   display: grid;
   place-items: center;
   overflow: hidden;
   opacity: 0;
   animation: fadeInText 2s ease-in-out forwards; 
+  max-width: 1100px;
 }
 .slider::before,
 .slider::after{
@@ -100,7 +101,6 @@
 .slide {
   width: 150px;
   height: 60px;
-
   display: grid;
   place-items: center;
   transition:0.5s;
@@ -118,16 +118,24 @@
     transform: translateX(calc(-150px * 10));
   }
 }
-
+@media screen and (max-height: 768px) {
+  .main-container{
+    align-items: center;
+  }
+}
 @media screen and (max-width: 768px) {
   .main-container{
     padding: 95px 15px 15px 15px;
+    min-height: 100vh;
   }
   .logo{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100%;
+  }
+  .slider{
+    margin-top: 2rem;
   }
   .slide-track {
     width: calc(80px * 20);
